# p2p_game

./: .gitignore  Cargo.toml  README.md
assets/: arena.glb  bullet.glb  tank_green.glb  tank_red.glb
src/: assets.rs  bullet.rs  camera.rs  components.rs  constants.rs  input.rs  lib.rs  main.rs  networking.rs  player.rs  resources.rs  states.rs
